--- a/.env
+++ b/.env
@@ -16,5 +16,6 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=true
 APP_SECRET=3fd4fdd8ef681b877bd5350c8316b8fe
 ###< symfony/framework-bundle ###
